kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs
  name: nodejs-app-lb
  namespace: nodejs
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 3000
  selector:
    app: nodejs
  sessionAffinity: None
  type: LoadBalancer
