kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: nodejs
spec:
  rules:
    - host: nodejs.leartbeqiraj.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-app-np
                port:
                  number: 9090
          - path: /whoami
            pathType: ImplementationSpecific
            backend:
              service:
                name: nodejs-app-np
                port:
                  number: 9090
  tls:
    - hosts:
        - my-nodejs-app.com
      secretName: leart
